--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^4.1.0",
+    "reactjs-social-login": "^2.6.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
